src/components/AppHeader/AppHeader.scss
@use '../../styles/variables' as v;

.header {
  display: flex;
  align-items: center;
  height: 6rem;
  border-bottom: 1px solid #d9d9d9;

  &-logo {
    font-size: 1.5rem;
  }

  &-navbar {
    display: flex;
    align-items: center;
    gap: 0.75rem;

    &-container {
      display: flex;
      justify-content: center;
      align-items: center;
      gap: 0.75rem;
    }

    @media (max-width: 830px) {
      justify-content: space-between;
    }
  }

  &-link-sell,
  &-link-category {
    svg {
      padding-right: 10px;
    }

    &:hover {
      text-decoration: underline;

      svg {
        opacity: 0.8;
      }
    }
  }

  .loging-container {
    position: relative;
    display: none;
    height: 100%;

    @media (min-width: v.$layout-breakpoint-tablet-navbar) {
      display: block;
    }
  }

  .icon-dollar,
  .icon-category,
  .icon-user {
    height: 1.2rem;
  }

  .icon-dollar {
    color: v.$color-secondary;
  }

  .icon-category {
    color: v.$color-primary;
  }

  &-btn-online {
    display: none;

    @media (min-width: v.$layout-breakpoint-tablet-navbar) {
      padding: 10px 20px;
      display: flex;
      justify-content: center;
      align-items: center;
      gap: 10px;
      border: none;
      outline: none;
      background-color: #fff;
      border: 3px solid #fff;
      border-radius: 5px;

      &:hover {
        background-color: #fcf6f0;
      }
    }

    span {
      font-size: 0.9rem;
    }
  }

  .logo-user-profil {
    width: 40px;
    height: 40px;
    display: inline-block;

    .avatar {
      border-radius: 50%;
      border: 2px solid v.$color-primary;
    }
  }

  // Hamburger Menu.
  .hamburger-menu {
    display: inline-block;
    position: relative;
    z-index: 2;

    @media (min-width: 620px) {
      display: none;
    }
  }

  .toggler-hamburger,
  .hamburger-lines {
    position: absolute;
    display: block;
  }

  .toggler-hamburger {
    z-index: 2;
    opacity: 0;
    width: 100%;
    height: 100%;
  }

  .toggler-hamburger:hover {
    cursor: pointer;
  }

  .line {
    display: block;
    width: 30px;
    height: 4px;
    border-radius: 2px;
    background-color: gray;
    margin: 4px auto;
    transition: all 0.3s ease-in-out;
  }

  .hamburger-line.is-active .line:nth-child(2) {
    opacity: 0;
  }

  .hamburger-line.is-active .line:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }

  .hamburger-line.is-active .line:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
}

// Searchbar
.container-searchbar {
  visibility: hidden;
  display: none;
  flex: 2;

  border: 2px solid v.$color-searchbar;
  background-color: v.$color-searchbar;
  border-radius: 30px;
  padding: 8px;


  @media (min-width: 683px) {
    display: block;
    visibility: visible;
  }

  .searchbar {
    form {
      display: flex;
      flex-wrap: nowrap;
    }

    button {
      outline: none;
      border: none;
      background: none;
    }

    input {
      width: 100%;
      outline: none;
      border: none;
      background-color: inherit;
    }
  }

  &:focus-within {
    border: 2px solid v.$color-primary;
  }

  &.outside-navbar {
    margin-top: 15px;
  }
}

// Search suggestions
.resultSearch {
  position: relative;
  z-index: 2;

  .arraySearch {
    margin-top: 12px;
    position: absolute;
    padding: 0;
    width: 100%;
    box-shadow: 1px 1px 3px #bdc5c8, -1px 1px 3px #bdc5c8;
    background-color: white;
    border-radius: 5px;
    list-style: none;
  }

  .list-inside {
    margin: 0;

    a {
      display: block;
      padding: 10px 30px;

      &:hover {
        background-color: #efefef;
        cursor: pointer;
      }
    }
  }
}

.btn-login {
  display: none;
}

.btn-login {
  border: none;
  background: none;
  cursor: pointer;

  a {
    display: none;
  }

  @media (min-width: 435px) {
    a {
      display: inline;
    }

    svg {
      margin-top: 4px;
      padding-right: 10px;
    }
  }

  @media (min-width: 620px) {
    display: inline;
    padding: 10px;
    background-color: v.$color-primary;
    color: v.$color-text;
    border-radius: 5px;
    border: 3px solid #fff;

    &:hover {
      border: 3px solid #88b4ba;
    }
  }
}

.btn-sidebar {
  border: none;
  background: none;
  cursor: pointer;
  display: inline;
  padding: 10px;
  background-color: v.$color-primary;
  color: v.$color-text;
  border-radius: 5px;
  border: 3px solid #fff;
}

// sidebar menu
.aside-menu {
  position: fixed;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 15px;
  padding-top: 80px;
  background-color: v.$color-primary;
  z-index: 1;
  top: 0;
  width: 100%;
  left: -100%;
  height: 100%;
  overflow: hidden;
  -webkit-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;

  &.is-open {
    left: 0;
  }

  ul {
    list-style: none;
    padding: 0;
  }

  a {
    color: white;
  }

  // profile sidebar
  .profile {
    img {
      width: 100px;
      height: 100px;
      border-radius: 50%;
    }

    h3 {
      text-align: center;
      margin: 10px auto 5px;
      color: white;
    }
  }

  // sidebar menu items
  .menu-items {
    li a {
      display: block;
      padding: 13px 30px;
      border-bottom: 1px solid #10558d;

      &:hover {
        color: #10558d;
        background-color: white;
        border-left: 3px solid v.$color-lake;

        svg {
          color: #10558d;
        }

      }
    }

    // icon
    svg {
      display: inline-block;
      color: white;
      width: 30px;
    }
  }
}

